# rust-karaoke-thriller

./: Cargo.toml  song.json
src/: lyrics.rs  main.rs
